# OPD

./: .gitignore  AGENTS.md  README.md  pyproject.toml  requirements.txt  train.py
AI/: code_map.md  implementation.md  memory.md
AI/ideas/: 1.md  2.md  3.md  4.md  5.md  6.md
LinearOPSD/: README.md  corruption.py  data_collator.py  extra_dep_requirements.md  grpo_train.py  loss_detail_logging.py  opsd_train.py  opsd_trainer.py  pyproject.toml  sft_train.py  token_loss_categories.py
LinearOPSD/eval/: evaluate_gsm8k.py  evaluate_math.py  inspect_linear_opsd_rollout.py  pyproject.toml  run_eval.sh  run_eval_gsm8k.sh  run_inspect_rollout.sh
LinearOPSD/scripts/: run_linear_opsd_qwen35_0p8b.sh  run_linear_opsd_qwen35_2b.sh  run_linear_opsd_qwen35_4b.sh
QwenOPSD/: checkpoint.py  distributed.py  io.py  model_loader.py  run_eval.py  run_train.py
QwenOPSD/eval/: config.py  runner.py  runtime.py
QwenOPSD/train/: config.py  corruption.py  data.py  formatting.py  loop.py  losses.py  runtime.py
configs/: gdn_340m_opd.yaml  transformer_340m.yaml
configs/eval/: arc_ai2.yaml  infer_text.yaml
configs/exposure_bias/: fineweb_edu_gdn1p3b.yaml  fineweb_edu_gdn340m.yaml  fineweb_edu_transformer1p3b.yaml  fineweb_edu_transformer340m.yaml  gsm8k_gdn1p3b.yaml  gsm8k_transformer1p3b.yaml  harrypotter_gdn1p3b.yaml  harrypotter_gdn340m.yaml  harrypotter_transformer1p3b.yaml  harrypotter_transformer340m.yaml  scifi_tv_gdn1p3b.yaml  scifi_tv_gdn340m.yaml  scifi_tv_transformer1p3b .yaml  scifi_tv_transformer1p3b.yaml
configs/exposure_bias_train/: asoiaf_gdn1p3b_lora_last4.yaml  asoiaf_gdn340m_lora_last4.yaml  gsm8k_gdn1p3b_lora_last4.yaml  gsm8k_transformer1p3b_lora_last4.yaml  harrypotter_gdn1p3b_lora_last4.yaml  harrypotter_gdn340m_lora_last4.yaml  harrypotter_transformer1p3b_lora_last4.yaml  scifi_tv_gdn1p3b_lora_last4.yaml  scifi_tv_gdn340m_lora_last4.yaml  scifi_tv_transformer1p3b_lora_last4.yaml  xfiles_gdn1p3b_lora_last4.yaml  xfiles_gdn340m_lora_last4.yaml
configs/memory_pollution/: arc_gdn1p3b_random_tokens.yaml  (+5 more)
eval/: checkpoint_loader.py  config.py  infer_config.py  io.py  lm_eval_model.py  model_runtime.py  run_eval.py  run_infer.py  run_lm_eval.py
exposure_bias/: config.py  io.py  metrics.py  model_loader.py  run_eval.py  run_train.py  runtime.py  scoring.py  text_data.py
memory_pollution/: config.py  io.py  metrics.py  model_loader.py  perturb.py  run_eval.py  runtime.py  scoring.py  state.py
opd/: __init__.py  checkpoint.py  config.py  distributed.py  fineweb_data.py  losses.py  model_loader.py  rollout.py  state_alignment.py  train_loop.py
scripts/: compare_gsm8k_thought_reveal.py  download_arc_ai2.py  run_1gpu.sh  run_eval_arc.sh  run_exposure_bias.sh  run_exposure_bias_trian.sh  run_infer.sh  run_infer_text.sh  run_lm_eval.sh  run_memory_pullution.sh  run_ngpu.sh
(+27 files in other folders)
