[project]
name = "opd"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "accelerate>=0.33",
    "datasets>=3.3.0",
    "einops>=0.8.2",
    "flash-linear-attention>=0.4.2",
    "peft>=0.13",
    "pyyaml>=6.0",
    "torch>=2.5",
    "transformers>=4.45.0",
    "triton>=3.0",
    "wandb>=0.17",
]

[[tool.uv.index]]
name = "tsinghua"
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = [{ index = "pytorch-cu128" }]