[project]
name = "opsd"
version = "0.1.0"
requires-python = ">=3.10,<3.11"
dependencies = [
  "torch>=2.10,<2.12",
  "torchvision>=0.25,<0.27",
  "torchaudio>=2.10,<2.12",

  "accelerate==1.11.0",
  "transformers @ git+https://gh-proxy.org/https://github.com/huggingface/transformers.git@main",
  "trl==0.26.0",
  "peft==0.18.1",

  "datasets>=3.6.0",
  "deepspeed==0.18.2",
  "bitsandbytes==0.48.2",
  "wandb==0.22.3",
  "einops==0.8.1",
  "safetensors==0.5.3",
  "sentencepiece==0.1.99",
  "tiktoken==0.9.0",
  "math-verify==0.8.0",
  "pillow>=10",

  "weave",
  "mergekit"
]

[tool.uv]
package = false

[[tool.uv.index]]
name = "tsinghua"
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = [{ index = "pytorch-cu128" }]
torchvision = [{ index = "pytorch-cu128" }]
torchaudio = [{ index = "pytorch-cu128" }]